--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,52 @@
 *.out
 *.app
 
-# debug information files
+# Debug information files
 *.dwo
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
+.Python
+pip-log.txt
+pip-delete-this-directory.txt
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Virtual environments
+venv/
+env/
+ENV/
+.venv
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Build directories
+cmake-build-debug/
+cmake-build-release/
+build/
+out/
+
+# Temporary files
+*.tmp
+*.bak
+*.log
